# BotDialog2022

./: .gitignore  AdditionalTools.cpp  Bot.cpp  Bot.h  CMakeLists.txt  README.md  Setting.json  bot_check.sh  defaultSettings.json  error_log.txt  restart.sh  token.txt
BotTools/: BotTools.h  Button.cpp  CMakeLists.txt  ToolsForAgrument.cpp
Connector/: CMakeLists.txt  DataBase.cpp  DataBase.h  DataBaseReview.h  db_bot.sql
Error/: CMakeLists.txt  ErrorSave.cpp  ErrorSave.h
Json/: CMakeLists.txt  json.cpp  json.h  path.h.in
ReviewBot/: CMakeLists.txt  ReviewBot.cpp  ReviewBot.h  States.h
ReviewBot/Event/: AddEvent.cpp  CMakeLists.txt  Event.cpp  Event.h  WorkingEvent.cpp
ReviewBot/Review/: AddReview.cpp  CMakeLists.txt  ReadReview.cpp  Review.cpp  Review.h
ReviewBot/Time/: CMakeLists.txt
SecretFriends/: CMakeLists.txt  SecretFriends.h  TablSecretFriends.sql
scripts/: backup.sh  bot_check.sh  bot_start.sh  count_string.py  restart.sh
src/: Bot.cpp  Bot.h  Bot.h.in  CMakeLists.txt
src/Connector/: CMakeLists.txt  DataBase.cpp  DataBase.h  db_bot.sql
src/Json/: CMakeLists.txt  json.cpp  json.h
src/ReviewBot/: CMakeLists.txt  ReviewBot.cpp  ReviewBot.h  States.h
src/ReviewBot/Event/: CMakeLists.txt  Event.cpp  Event.h
src/ReviewBot/Review/: CMakeLists.txt  Review.cpp  Review.h
src/Time/: CMakeLists.txt  Time.cpp  Time.h
temp/: 2022_07_27_Препконцерт.csv
tempReviews/: 2022_07_29_ВФК.txt  2022_07_30_Эффект бабочки.txt
utils/: CMakeLists.txt  GetIndex.h  Hashing.h  utils.cpp  utils.h
utils/TelegramTools/: CMakeLists.txt  TelegramTools.cpp  TelegramTools.h
